# housing_prediction

./: .gitignore  02.ipynb  03_clasification.ipynb  04_modelos.ipynb  05_modelos_iris.ipynb  06_arboles.ipynb  07_ensamblaje_random_forest.ipynb  08_pca.ipynb  main.py  pyproject.toml  requirements.txt
